Closed
Bug 403501
Opened 17 years ago
Closed 17 years ago
Rich text editing broken after back, forward in history
Categories
(Core :: DOM: Editor, defect, P2)
Core
DOM: Editor
Tracking
()
VERIFIED
FIXED
mozilla1.9beta2
People
(Reporter: aaronlev, Assigned: peterv)
References
Details
(Keywords: access, regression)
Attachments
(1 file)
1.47 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
1. Load Firefox to any page
2. Go to http://www.mozilla.org/editor/midasdemo/
3. Click in the text area and type "abc"
4. Alt+Left then Alt+right (back and forward in history)
Results:
1. Focus in wrong place
2. If you click in the text area, the caret is not visible but you can still edit.
3. Or, if you instead tab right away, the caret appears, but the focus also appears on the checkbox after the rich text area, and keypresses are sent there even though the caret appears visible in the box.
Flags: blocking1.9?
Reporter | ||
Updated•17 years ago
|
Summary: Rich text editing broken → Rich text editing broken after back, forward in history
Comment 2•17 years ago
|
||
Regression range is http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1182998100&maxdate=1183002779
Blocks: contenteditable
Updated•17 years ago
|
Flags: in-testsuite?
Comment 3•17 years ago
|
||
If you go to http://www.mozilla.org/editor/midasdemo/ and without typing anything go back and forward, you can't type anymore in the box, even if you try to focus the text field by clicking in it.
Updated•17 years ago
|
Version: unspecified → Trunk
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Assignee | ||
Updated•17 years ago
|
Assignee: nobody → peterv
Assignee | ||
Comment 4•17 years ago
|
||
This seems to work.
Assignee | ||
Updated•17 years ago
|
Attachment #291386 -
Flags: superreview?(jst)
Attachment #291386 -
Flags: review?(jst)
Updated•17 years ago
|
Attachment #291386 -
Flags: superreview?(jst)
Attachment #291386 -
Flags: superreview+
Attachment #291386 -
Flags: review?(jst)
Attachment #291386 -
Flags: review+
Assignee | ||
Updated•17 years ago
|
Status: NEW → RESOLVED
Closed: 17 years ago
OS: Windows XP → All
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
Comment 5•17 years ago
|
||
verified fixed using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b2pre) Gecko/2007120505 Minefield/3.0b2pre using steps in Comment 0.
Status: RESOLVED → VERIFIED
![]() |
||
Comment 6•17 years ago
|
||
When we add regression tests, make sure to add both bfcache and non-bfcache ones?
You need to log in
before you can comment on or make changes to this bug.
Description
•