Fix for bug 403501 (Rich text editing broken after back, forward in history). r/sr=jst.